Apply translation memory

--- a/l10n/po/ja_JP/_versions/main/guides/config-extending-support.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-extending-support.adoc.po
@@ -58,7 +58,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-extending-support.adoc:316
 #, no-wrap
 msgid "Example"
-msgstr ""
+msgstr "例"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-extending-support.adoc:35
@@ -80,7 +80,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-extending-support.adoc:322
 #, no-wrap
 msgid "package org.acme.config;\n"
-msgstr ""
+msgstr "package org.acme.config;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:42
@@ -409,13 +409,13 @@ msgstr ""
 #: upstream/_versions/main/guides/config-extending-support.adoc:210
 #, no-wrap
 msgid "public class MicroProfileCustomValue {\n"
-msgstr ""
+msgstr "public class MicroProfileCustomValue {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:212
 #, no-wrap
 msgid "    private final int number;\n"
-msgstr ""
+msgstr "    private final int number;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:216
@@ -425,6 +425,9 @@ msgid ""
 "        this.number = number;\n"
 "    }\n"
 msgstr ""
+"    public MicroProfileCustomValue(int number) {\n"
+"        this.number = number;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:221
@@ -435,6 +438,10 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    public int getNumber() {\n"
+"        return number;\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-extending-support.adoc:224
@@ -445,13 +452,13 @@ msgstr ""
 #: upstream/_versions/main/guides/config-extending-support.adoc:230
 #, no-wrap
 msgid "import org.eclipse.microprofile.config.spi.Converter;\n"
-msgstr ""
+msgstr "import org.eclipse.microprofile.config.spi.Converter;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:232
 #, no-wrap
 msgid "public class MicroProfileCustomValueConverter implements Converter<MicroProfileCustomValue> {\n"
-msgstr ""
+msgstr "public class MicroProfileCustomValueConverter implements Converter<MicroProfileCustomValue> {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:238
@@ -463,6 +470,11 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    @Override\n"
+"    public MicroProfileCustomValue convert(String value) {\n"
+"        return new MicroProfileCustomValue(Integer.parseInt(value));\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-extending-support.adoc:242
@@ -481,12 +493,14 @@ msgid ""
 "@ConfigProperty(name = \"configuration.value.name\")\n"
 "MicroProfileCustomValue value;\n"
 msgstr ""
+"@ConfigProperty(name = \"configuration.value.name\")\n"
+"MicroProfileCustomValue value;\n"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/config-extending-support.adoc:251
 #, no-wrap
 msgid "Converter priority"
-msgstr ""
+msgstr "コンバーターの優先順位"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-extending-support.adoc:256
@@ -500,6 +514,8 @@ msgid ""
 "import javax.annotation.Priority;\n"
 "import org.eclipse.microprofile.config.spi.Converter;\n"
 msgstr ""
+"import javax.annotation.Priority;\n"
+"import org.eclipse.microprofile.config.spi.Converter;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:266
@@ -508,6 +524,8 @@ msgid ""
 "@Priority(150)\n"
 "public class MyCustomConverter implements Converter<MicroProfileCustomValue> {\n"
 msgstr ""
+"@Priority(150)\n"
+"public class MyCustomConverter implements Converter<MicroProfileCustomValue> {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:269
@@ -516,6 +534,8 @@ msgid ""
 "    @Override\n"
 "    public MicroProfileCustomValue convert(String value) {\n"
 msgstr ""
+"    @Override\n"
+"    public MicroProfileCustomValue convert(String value) {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:276
@@ -528,6 +548,12 @@ msgid ""
 "            secretNumber = Integer.parseInt(value);\n"
 "        }\n"
 msgstr ""
+"        final int secretNumber;\n"
+"        if (value.startsFrom(\"OBF:\")) {\n"
+"            secretNumber = Integer.parseInt(SecretDecoder.decode(value));\n"
+"        } else {\n"
+"            secretNumber = Integer.parseInt(value);\n"
+"        }\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-extending-support.adoc:280
@@ -537,6 +563,9 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"        return new MicroProfileCustomValue(secretNumber);\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-extending-support.adoc:284
