--- a/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config-mappings.adoc.po
@@ -183,7 +183,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:528
 #, no-wrap
 msgid "application.properties"
-msgstr ""
+msgstr "application.properties"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:98
@@ -596,7 +596,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:319
 #, no-wrap
 msgid "Collections"
-msgstr ""
+msgstr "コレクション"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:322
@@ -671,7 +671,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:360
 #, no-wrap
 msgid "Maps"
-msgstr ""
+msgstr "マップ"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:363
@@ -706,7 +706,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:389
 #, no-wrap
 msgid "Defaults"
-msgstr ""
+msgstr "デフォルト"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:393
@@ -757,7 +757,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:473
 #, no-wrap
 msgid "package org.acme.config;\n"
-msgstr ""
+msgstr "package org.acme.config;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:422
@@ -766,6 +766,8 @@ msgid ""
 "import io.quarkus.arc.config.ConfigProperties;\n"
 "import java.util.Optional;\n"
 msgstr ""
+"import io.quarkus.arc.config.ConfigProperties;\n"
+"import java.util.Optional;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:425
@@ -774,6 +776,8 @@ msgid ""
 "@ConfigProperties(prefix = \"greeting\") <1>\n"
 "public class GreetingConfiguration {\n"
 msgstr ""
+"@ConfigProperties(prefix = \"greeting\") <1>\n"
+"public class GreetingConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:429
@@ -783,6 +787,9 @@ msgid ""
 "    private String suffix = \"!\"; <2>\n"
 "    private Optional<String> name;\n"
 msgstr ""
+"    private String message;\n"
+"    private String suffix = \"!\"; <2>\n"
+"    private Optional<String> name;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:433
@@ -792,6 +799,9 @@ msgid ""
 "        return message;\n"
 "    }\n"
 msgstr ""
+"    public String getMessage() {\n"
+"        return message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:437
@@ -801,6 +811,9 @@ msgid ""
 "        this.message = message;\n"
 "    }\n"
 msgstr ""
+"    public void setMessage(String message) {\n"
+"        this.message = message;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:441
@@ -810,6 +823,9 @@ msgid ""
 "        return suffix;\n"
 "    }\n"
 msgstr ""
+"    public String getSuffix() {\n"
+"        return suffix;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:445
@@ -819,6 +835,9 @@ msgid ""
 "        this.suffix = suffix;\n"
 "    }\n"
 msgstr ""
+"    public void setSuffix(String suffix) {\n"
+"        this.suffix = suffix;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:449
@@ -828,6 +847,9 @@ msgid ""
 "        return name;\n"
 "    }\n"
 msgstr ""
+"    public Optional<String> getName() {\n"
+"        return name;\n"
+"    }\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:454
@@ -838,16 +860,20 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    public void setName(Optional<String> name) {\n"
+"        this.name = name;\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:458
 msgid "`prefix` is optional. If not set then the prefix to be used will be determined by the class name. In this case it would still be `greeting` (since the `Configuration` suffix is removed). If the class were named `GreetingExtraConfiguration` then the resulting default prefix would be `greeting-extra`."
-msgstr ""
+msgstr "`prefix` は任意です。設定していない場合は、使用される接頭辞はクラス名によって決まります。この場合も (`Configuration` の接尾辞は削除されているため) `greeting` となります。クラス名が `GreetingExtraConfiguration` の場合は、デフォルトの接頭辞が `greeting-extra` となります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:459
 msgid "`!` will be the default value if `greeting.suffix` is not set."
-msgstr ""
+msgstr "`!` は、`greeting.suffix` が設定されていない場合のデフォルト値になります。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:461
@@ -861,6 +887,8 @@ msgid ""
 "@Inject\n"
 "GreetingConfiguration greetingConfiguration;\n"
 msgstr ""
+"@Inject\n"
+"GreetingConfiguration greetingConfiguration;\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:469
@@ -875,6 +903,9 @@ msgid ""
 "import org.eclipse.microprofile.config.inject.ConfigProperty;\n"
 "import java.util.Optional;\n"
 msgstr ""
+"import io.quarkus.arc.config.ConfigProperties;\n"
+"import org.eclipse.microprofile.config.inject.ConfigProperty;\n"
+"import java.util.Optional;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:480
@@ -883,6 +914,8 @@ msgid ""
 "@ConfigProperties(prefix = \"greeting\")\n"
 "public interface GreetingConfiguration {\n"
 msgstr ""
+"@ConfigProperties(prefix = \"greeting\")\n"
+"public interface GreetingConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:483
@@ -891,6 +924,8 @@ msgid ""
 "    @ConfigProperty(name = \"message\") <1>\n"
 "    String message();\n"
 msgstr ""
+"    @ConfigProperty(name = \"message\") <1>\n"
+"    String message();\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:486
@@ -899,6 +934,8 @@ msgid ""
 "    @ConfigProperty(defaultValue = \"!\")\n"
 "    String getSuffix(); <2>\n"
 msgstr ""
+"    @ConfigProperty(defaultValue = \"!\")\n"
+"    String getSuffix(); <2>\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:489
@@ -907,6 +944,8 @@ msgid ""
 "    Optional<String> getName(); <3>\n"
 "}\n"
 msgstr ""
+"    Optional<String> getName(); <3>\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:492
@@ -932,12 +971,13 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:500
 #, no-wrap
 msgid "Additional notes on @ConfigProperties"
-msgstr ""
+msgstr "@ConfigProperties に関する追加の注意事項"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:504
+#, fuzzy
 msgid "When using a regular class annotated with `@ConfigProperties` the class doesn't necessarily have to declare getters and setters. Having simple public non-final fields is valid as well."
-msgstr ""
+msgstr "`@ConfigProperties` でアノテーションされた通常のクラスを使用する場合、クラスは必ずしも getter および setter を宣言する必要はありません。単純でパブリックな確定的でないフィールドを持つことも有効です。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:507
@@ -953,6 +993,8 @@ msgid ""
 "@ConfigProperties(prefix = \"greeting\")\n"
 "public class GreetingConfiguration {\n"
 msgstr ""
+"@ConfigProperties(prefix = \"greeting\")\n"
+"public class GreetingConfiguration {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:517
@@ -963,6 +1005,10 @@ msgid ""
 "    public Optional<String> name;\n"
 "    public ContentConfig content; <1>\n"
 msgstr ""
+"    public String message;\n"
+"    public String suffix = \"!\";\n"
+"    public Optional<String> name;\n"
+"    public ContentConfig content; <1>\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:523
@@ -974,11 +1020,16 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    public static class ContentConfig {\n"
+"        public Integer prizeAmount;\n"
+"        public List<String> recipients;\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:525
 msgid "The name of the field (not the class name) will determine the name of the properties that are bound to the object."
-msgstr ""
+msgstr "フィールドの名前 (クラス名ではありません) は、オブジェクトにバインドされるプロパティーの名前を決定します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:527
@@ -994,6 +1045,10 @@ msgid ""
 "greeting.content.prize-amount=10\n"
 "greeting.content.recipients=Jane,John\n"
 msgstr ""
+"greeting.message = hello\n"
+"greeting.name = quarkus\n"
+"greeting.content.prize-amount=10\n"
+"greeting.content.recipients=Jane,John\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:538
@@ -1009,6 +1064,9 @@ msgid ""
 "    public String message;\n"
 "    public String suffix = \"!\";\n"
 msgstr ""
+"    @Size(min = 20)\n"
+"    public String message;\n"
+"    public String suffix = \"!\";\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:549
@@ -1017,7 +1075,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:667
 #, no-wrap
 msgid "}\n"
-msgstr ""
+msgstr "}"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:552
@@ -1028,7 +1086,7 @@ msgstr ""
 #: upstream/_versions/main/guides/config-mappings.adoc:553
 #, no-wrap
 msgid "Using same ConfigProperties with different prefixes"
-msgstr ""
+msgstr "同じ ConfigProperties で異なる接頭辞を使用"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:558
@@ -1043,6 +1101,8 @@ msgid ""
 "@ApplicationScoped\n"
 "public class SomeBean {\n"
 msgstr ""
+"@ApplicationScoped\n"
+"public class SomeBean {\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:578
@@ -1051,6 +1111,8 @@ msgid ""
 "    @Inject <1>\n"
 "    GreetingConfiguration greetingConfiguration;\n"
 msgstr ""
+"    @Inject <1>\n"
+"    GreetingConfiguration greetingConfiguration;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:581
@@ -1059,22 +1121,24 @@ msgid ""
 "    @ConfigPrefix(\"other\") <2>\n"
 "    GreetingConfiguration otherConfiguration;\n"
 msgstr ""
+"    @ConfigPrefix(\"other\") <2>\n"
+"    GreetingConfiguration otherConfiguration;\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:586
 msgid "At this injection point `greetingConfiguration` will use the `greeting` prefix since that is what has been defined on `@ConfigProperties`."
-msgstr ""
+msgstr "この注入ポイントでは、`greetingConfiguration` は `@ConfigProperties` で定義されている `greeting` の接頭辞を使用します。"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:588
 msgid "At this injection point `otherConfiguration` will use the `other` prefix from `@ConfigPrefix` instead of the `greeting` prefix. Notice that in this case `@Inject` is not required."
-msgstr ""
+msgstr "この注入ポイントでは、`otherConfiguration` は、`greeting` の接頭辞の代わりに `@ConfigPrefix` から `other` の接頭辞を使用します。この場合、`@Inject` は必須ではないことに注意してください。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/config-mappings.adoc:589
 #, no-wrap
 msgid "Using a list of objects"
-msgstr ""
+msgstr "オブジェクトリストの使用"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:592
@@ -1093,6 +1157,13 @@ msgid ""
 "    public List<Nested> inputs;\n"
 "    public List<Nested> outputs;\n"
 msgstr ""
+"@ConfigProperties(prefix = \"complex\")\n"
+"public class ComplexConfiguration {\n"
+"    public String name;\n"
+"    public String user;\n"
+"    public String password;\n"
+"    public List<Nested> inputs;\n"
+"    public List<Nested> outputs;\n"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:608
@@ -1104,6 +1175,11 @@ msgid ""
 "    }\n"
 "}\n"
 msgstr ""
+"    public static class Nested {\n"
+"        public String user;\n"
+"        public String password;\n"
+"    }\n"
+"}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:612
@@ -1113,7 +1189,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:614
 msgid "`application.yaml`"
-msgstr ""
+msgstr "`application.yaml`"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:630
@@ -1134,11 +1210,25 @@ msgid ""
 "    - user: someotheruser\n"
 "      password: anothersecret\n"
 msgstr ""
+"complex:\n"
+"  name: defaultName\n"
+"  user: defaultUser\n"
+"  password: defaultPassword\n"
+"  inputs:\n"
+"    - user: user\n"
+"      password: secret\n"
+"    - user: otheruser\n"
+"      password: secret2\n"
+"  outputs:\n"
+"    - user: someuser\n"
+"      password: asecret\n"
+"    - user: someotheruser\n"
+"      password: anothersecret\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:634
 msgid "A limitation of such configuration is that the types used as the generic types of the lists need to be classes and not interfaces."
-msgstr ""
+msgstr "このような設定の制限は、リストの汎用型として使用される型がインターフェースではなくクラスである必要があることです。"
 
 #. type: Title ===
 #: upstream/_versions/main/guides/config-mappings.adoc:635
@@ -1181,7 +1271,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/config-mappings.adoc:658
 msgid "`SomeBean.java`"
-msgstr ""
+msgstr "`SomeBean.java`"
 
 #. type: delimited block -
 #: upstream/_versions/main/guides/config-mappings.adoc:665
