--- a/l10n/po/ja_JP/_versions/main/guides/config.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/config.adoc.po
@@ -513,7 +513,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/config.adoc:224
 msgid "Interceptors for configuration value resolution"
-msgstr ""
+msgstr "設定値解決のためのインターセプタ―"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config.adoc:225
@@ -532,7 +532,7 @@ msgstr "設定プロパティーの注入"
 #. type: Plain text
 #: upstream/_versions/main/guides/config.adoc:227
 msgid "Logging"
-msgstr ""
+msgstr "ロギング"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/config.adoc:228
@@ -542,7 +542,7 @@ msgstr ""
 #. type: Plain text
 #: upstream/_versions/main/guides/config.adoc:230
 msgid "For more information, please check the link:https://smallrye.io/docs/smallrye-config/index.html[SmallRye Config documentation]."
-msgstr ""
+msgstr "詳細は、link:https://smallrye.io/docs/smallrye-config/index.html[SmallRye Config のドキュメント] を参照してください。"
 
 #~ msgid "As an alternative to injecting multiple related configuration values, you can also use the `@io.quarkus.arc.config.ConfigProperties` annotation to group these properties together.  See the <<config-reference.adoc#using_configproperties,Configuration Reference Guide>> for more information."
 #~ msgstr "複数の関連する設定値を注入する代わりに、 `@io.quarkus.arc.config.ConfigProperties` アノテーションを使用して、これらのプロパティーをまとめてグループ化することもできます。詳細については、『 link:config-reference.html#using_configproperties[設定リファレンスガイド] 』を参照してください。"
