--- a/l10n/po/ja_JP/_versions/main/guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/building-my-first-extension.adoc.po
@@ -3,18 +3,18 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-05-07 17:34+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-05-12 13:34+0900\n"
+"Language: my\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
@@ -207,7 +207,7 @@ msgstr ""
 "*拡張 (Augmentation)*。ビルド時に、Quarkus エクステンションはアプリケーションのバイトコード (依存関係を含む) と設定をロードしてスキャンします。\n"
 "この段階で、エクステンションは設定ファイルを読み込んだり、特定のアノテーションのためにクラスをスキャンしたりすることができます。\n"
 "すべてのメタデータが収集されたら、エクステンションは、ORM、DI、または REST コントローラーの設定のようなライブラリーのブートストラップアクションを前処理することができます。\n"
-"ブートストラップの結果はバイトコードに直接記録され、最終的なアプリケーションパッケージの一部となります。"
+"ブートストラップの結果はバイトコードに直接記録され、最終的なアプリケーションパッケージの一部となります。\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:84
@@ -219,7 +219,7 @@ msgid ""
 msgstr ""
 "*静的 Init* 実行時に、Quarkus は最初に、いくつかの拡張アクション/設定を含む最初の静的 init メソッドを実行します。\n"
 "ネイティブパッケージングを行う場合、このスタティックメソッドはビルド時に前処理され、生成されたオブジェクトは最終的なネイティブ実行ファイルにシリアライズされるため、初期化コードはネイティブモードでは実行されません (このフェーズではフィボナッチ関数を実行すると想像してください。計算の結果は、ネイティブ実行ファイルに直接記録されます)。\n"
-"JVM モードでアプリケーションを実行している場合、この静的 init フェーズはアプリケーションの開始時に実行されます。"
+"JVM モードでアプリケーションを実行している場合、この静的 init フェーズはアプリケーションの開始時に実行されます。\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:87
@@ -229,7 +229,7 @@ msgid ""
 "So, the more code you run during the two phases above, the faster your application will start.\n"
 msgstr ""
 "*ランタイム Init* このフェーズでは特に目立つことはありません。従来的なランタイムコード実行を行います。\n"
-"つまり、上記の 2 つのフェーズでより多くのコードを実行すればするほど、アプリケーションの起動が速くなります。"
+"つまり、上記の 2 つのフェーズでより多くのコードを実行すればするほど、アプリケーションの起動が速くなります。\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:89
@@ -601,7 +601,7 @@ msgstr ""
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:277
 #, no-wrap
 msgid "</project>\n"
-msgstr "</project>"
+msgstr "</project>\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:280
@@ -693,7 +693,7 @@ msgstr ""
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:595
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:311
@@ -1398,7 +1398,7 @@ msgstr "最初のエクステンションを構築し終えたばかりなので
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:709
 #, no-wrap
 msgid "*Classic Maven publication*\n"
-msgstr "*お約束の Maven キャッチ*"
+msgstr "*お約束の Maven キャッチ*\n"
 
 #. type: Plain text
 #: upstream/_versions/main/guides/building-my-first-extension.adoc:711
