Add tailing line breaks

--- a/l10n/po/ja_JP/_guides/config.adoc.po
+++ b/l10n/po/ja_JP/_guides/config.adoc.po
@@ -329,7 +329,7 @@ msgstr ""
 #: upstream/_guides/config.adoc:155
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Title ==
 #: upstream/_guides/config.adoc:157
