--- a/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm-panache.adoc.po
@@ -1365,7 +1365,7 @@ msgstr ""
 #: upstream/_guides/hibernate-orm-panache.adoc:725
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Title ===
 #: upstream/_guides/hibernate-orm-panache.adoc:710
