--- a/l10n/po/ja_JP/_guides/optaplanner.adoc.po
+++ b/l10n/po/ja_JP/_guides/optaplanner.adoc.po
@@ -406,7 +406,7 @@ msgstr ""
 #: upstream/_guides/optaplanner.adoc:952 upstream/_guides/optaplanner.adoc:1012
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/optaplanner.adoc:197
