--- a/l10n/po/ja_JP/_guides/reactive-event-bus.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-event-bus.adoc.po
@@ -581,7 +581,7 @@ msgstr ""
 #: upstream/_guides/reactive-event-bus.adoc:347
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/reactive-event-bus.adoc:350
