--- a/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-multipart.adoc.po
@@ -279,7 +279,7 @@ msgstr ""
 #: upstream/_guides/rest-client-multipart.adoc:262
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/rest-client-multipart.adoc:125
