--- a/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/resteasy-reactive.adoc.po
@@ -341,7 +341,7 @@ msgstr ""
 #: upstream/_guides/resteasy-reactive.adoc:1514
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/resteasy-reactive.adoc:124
