--- a/l10n/po/ja_JP/_guides/spring-di.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-di.adoc.po
@@ -189,7 +189,7 @@ msgstr ""
 #: upstream/_guides/spring-di.adoc:87 upstream/_guides/spring-di.adoc:262
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/spring-di.adoc:92
