--- a/l10n/po/ja_JP/_guides/spring-security.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-security.adoc.po
@@ -277,7 +277,7 @@ msgstr ""
 #: upstream/_guides/spring-security.adoc:217
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Title ==
 #: upstream/_guides/spring-security.adoc:135
