--- a/l10n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
+++ b/l10n/po/ja_JP/_guides/writing-native-applications-tips.adoc.po
@@ -605,7 +605,7 @@ msgstr ""
 #: upstream/_guides/writing-native-applications-tips.adoc:403
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: delimited block =
 #: upstream/_guides/writing-native-applications-tips.adoc:341
