--- a/l10n/po/ja_JP/_guides/centralized-log-management.adoc.po
+++ b/l10n/po/ja_JP/_guides/centralized-log-management.adoc.po
@@ -138,7 +138,7 @@ msgstr ""
 #: upstream/_guides/centralized-log-management.adoc:75
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/centralized-log-management.adoc:78
