--- a/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
+++ b/l10n/po/ja_JP/_guides/credentials-provider.adoc.po
@@ -206,7 +206,7 @@ msgstr ""
 #: upstream/_guides/credentials-provider.adoc:131
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/credentials-provider.adoc:110
