--- a/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging-http.adoc.po
@@ -426,7 +426,7 @@ msgstr ""
 #: upstream/_guides/reactive-messaging-http.adoc:206
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Title ==
 #: upstream/_guides/reactive-messaging-http.adoc:209
