--- a/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-messaging.adoc.po
@@ -594,7 +594,7 @@ msgstr ""
 #: upstream/_guides/reactive-messaging.adoc:333
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/reactive-messaging.adoc:336
