--- a/l10n/po/ja_JP/_guides/rest-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client.adoc.po
@@ -574,7 +574,7 @@ msgstr ""
 #: upstream/_guides/rest-client.adoc:313 upstream/_guides/rest-client.adoc:704
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/rest-client.adoc:316
