--- a/l10n/po/ja_JP/_guides/scheduler.adoc.po
+++ b/l10n/po/ja_JP/_guides/scheduler.adoc.po
@@ -435,7 +435,7 @@ msgstr ""
 #: upstream/_guides/scheduler.adoc:201
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/scheduler.adoc:203
