--- a/l10n/po/ja_JP/_guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-customization.adoc.po
@@ -131,7 +131,7 @@ msgstr ""
 #: upstream/_guides/security-customization.adoc:64
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:67
