--- a/l10n/po/ja_JP/_guides/websockets.adoc.po
+++ b/l10n/po/ja_JP/_guides/websockets.adoc.po
@@ -268,7 +268,7 @@ msgstr ""
 #: upstream/_guides/websockets.adoc:135 upstream/_guides/websockets.adoc:234
 #, no-wrap
 msgid "}\n"
-msgstr "}"
+msgstr "}\n"
 
 #. type: Plain text
 #: upstream/_guides/websockets.adoc:137
