--- a/l10n/po/ja_JP/_versions/1.7/guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_versions/1.7/guides/building-my-first-extension.adoc.po
@@ -6,14 +6,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
-"POT-Creation-Date: 2021-03-03 20:10+0000\n"
+"POT-Creation-Date: 2021-05-12 05:09+0000\n"
 "PO-Revision-Date: 2021-05-12 13:36+0900\n"
+"Last-Translator: \n"
+"Language-Team: \n"
 "Language: my\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: \n"
-"Language-Team: \n"
 "X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
@@ -79,6 +79,7 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_versions/1.7/guides/building-my-first-extension.adoc:33
+#, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
