--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-03-03 20:13+0000\n"
+"POT-Creation-Date: 2021-05-12 17:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -53,14 +53,14 @@ msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:17
-#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:26
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:53
 #, no-wrap
 msgid "`client`, `password`"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:20
-#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:28
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:56
 #, no-wrap
 msgid "`client`"
 msgstr ""
@@ -69,10 +69,114 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:25
 #, no-wrap
 msgid ""
+"[[quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.grant.access-token-property]]`link:#quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.grant.access-token-property[quarkus.oidc-client.grant.access-token-property]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Access token property name in a token grant response\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:26
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:35
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:44
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:62
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:71
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:80
+#, no-wrap
+msgid "string"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:29
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:65
+#, no-wrap
+msgid "`access_token`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:34
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.grant.refresh-token-property]]`link:#quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.grant.refresh-token-property[quarkus.oidc-client.grant.refresh-token-property]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Refresh token property name in a token grant response\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:38
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:74
+#, no-wrap
+msgid "`refresh_token`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:43
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.grant.expires-in-property]]`link:#quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.grant.expires-in-property[quarkus.oidc-client.grant.expires-in-property]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Refresh token property name in a token grant response\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:47
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:82
+#, no-wrap
+msgid "`expires_in`"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:52
+#, no-wrap
+msgid ""
 "[[quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.type]]`link:#quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.type[quarkus.oidc-client.\"id\".grant.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
 "Grant type\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:61
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.access-token-property]]`link:#quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.access-token-property[quarkus.oidc-client.\"id\".grant.access-token-property]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Access token property name in a token grant response\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:70
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.refresh-token-property]]`link:#quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.refresh-token-property[quarkus.oidc-client.\"id\".grant.refresh-token-property]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Refresh token property name in a token grant response\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:79
+#, no-wrap
+msgid ""
+"[[quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.expires-in-property]]`link:#quarkus-oidc-client-oidc-client-config-grant_quarkus.oidc-client.-id-.grant.expires-in-property[quarkus.oidc-client.\"id\".grant.expires-in-property]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"Refresh token property name in a token grant response\n"
 "--"
 msgstr ""
