--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-config-group-data-source-runtime-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-config-group-data-source-runtime-config.adoc.po
@@ -210,7 +210,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:106
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-datasource-config-group-data-source-runtime-config.adoc:114
