--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-data-sources-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-data-sources-build-time-config.adoc.po
@@ -113,7 +113,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-datasource-data-sources-build-time-config.adoc:126
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-datasource-data-sources-build-time-config.adoc:54
