--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-general-config-items.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource-general-config-items.adoc.po
@@ -121,7 +121,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-datasource-general-config-items.adoc:152
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-datasource-general-config-items.adoc:53
