--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-datasource.adoc.po
@@ -123,7 +123,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-datasource.adoc:173
 #, no-wrap
 msgid "int"
-msgstr ""
+msgstr "int"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-datasource.adoc:54
