--- a/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc.po
@@ -86,7 +86,7 @@ msgstr ""
 #: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:80
 #, no-wrap
 msgid "string"
-msgstr ""
+msgstr "string"
 
 #. type: Table
 #: upstream/_generated-config/latest/config/quarkus-oidc-client-oidc-client-config-grant.adoc:29
