Add machine translation

--- a/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
+++ b/l10n/po/ja_JP/_guides/reactive-sql-clients.adoc.po
@@ -1030,19 +1030,21 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/reactive-sql-clients.adoc:534
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Working with batch query results"
-msgstr ""
+msgstr "バッチクエリの結果を利用する"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:538
+#, fuzzy
 msgid "When executing batch queries, reactive SQL clients return a `RowSet` that corresponds to the results of the first element in the batch.  To get the results of the following batch elements, you must invoke the `RowSet#next` method until it returns `null`."
-msgstr ""
+msgstr "バッチクエリを実行する際、リアクティブSQLクライアントは、バッチの最初の要素の結果に対応する `RowSet` を返します。次のバッチ要素の結果を得るためには、 `null` が返ってくるまで `RowSet#next` メソッドを呼び出す必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:541
+#, fuzzy
 msgid "Let's say you want to update some rows and compute the total number of affected rows.  You must inspect each `RowSet`:"
-msgstr ""
+msgstr "いくつかの行を更新して、影響を受ける行の総数を計算したいとします。そのためには，各 `RowSet` を調べる必要があります．"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-sql-clients.adoc:545
@@ -1075,18 +1077,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:560
+#, fuzzy
 msgid "Compute the sum of `RowSet#rowCount`."
-msgstr ""
+msgstr "`RowSet#rowCount` の合計を計算します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:561
+#, fuzzy
 msgid "Invoke `RowSet#next` until it returns `null`."
-msgstr ""
+msgstr "`null` を返すまで `RowSet#next` を起動します。"
 
 #. type: Plain text
 #: upstream/_guides/reactive-sql-clients.adoc:563
+#, fuzzy
 msgid "As another example, if you want to load all the rows you just inserted, you must concatenate the contents of each `RowSet`:"
-msgstr ""
+msgstr "別の例として、先ほど挿入したすべての行を読み込みたい場合は、各 `RowSet` の内容を連結する必要があります。"
 
 #. type: delimited block -
 #: upstream/_guides/reactive-sql-clients.adoc:567
