--- a/l10n/po/ja_JP/_guides/security-customization.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-customization.adoc.po
@@ -595,43 +595,51 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:327
+#, fuzzy
 msgid "`BCFIPS` provider option is supported in native image but the algorithm self-tests which rely on `java.security.SecureRandom` to verify the generated keys have been removed for these tests to pass. The following classes have been affected:"
-msgstr ""
+msgstr "`BCFIPS` プロバイダオプションはネイティブイメージでサポートされていますが、生成されたキーを確認するために `java.security.SecureRandom` に依存していたアルゴリズムのセルフテストは、これらのテストをパスするために削除されました。以下のクラスが影響を受けます。"
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:328
+#, fuzzy
 msgid "`org.bouncycastle.crypto.general.DSA`"
-msgstr ""
+msgstr "`org.bouncycastle.crypto.general.DSA`"
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:329
+#, fuzzy
 msgid "`org.bouncycastle.crypto.general.DSTU4145`"
-msgstr ""
+msgstr "`org.bouncycastle.crypto.general.DSTU4145`"
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:330
+#, fuzzy
 msgid "`org.bouncycastle.crypto.general.ECGOST3410`"
-msgstr ""
+msgstr "`org.bouncycastle.crypto.general.ECGOST3410`"
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:331
+#, fuzzy
 msgid "`org.bouncycastle.crypto.general.GOST3410`"
-msgstr ""
+msgstr "`org.bouncycastle.crypto.general.GOST3410`"
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:332
+#, fuzzy
 msgid "`org.bouncycastle.crypto.fips.FipsDSA`"
-msgstr ""
+msgstr "`org.bouncycastle.crypto.fips.FipsDSA`"
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:333
+#, fuzzy
 msgid "`org.bouncycastle.crypto.fips.FipsEC`"
-msgstr ""
+msgstr "`org.bouncycastle.crypto.fips.FipsEC`"
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:334
+#, fuzzy
 msgid "`org.bouncycastle.crypto.fips.FipsRSA`"
-msgstr ""
+msgstr "`org.bouncycastle.crypto.fips.FipsRSA`"
 
 #. type: Title ===
 #: upstream/_guides/security-customization.adoc:336
@@ -698,8 +706,9 @@ msgstr ""
 
 #. type: delimited block =
 #: upstream/_guides/security-customization.adoc:383
+#, fuzzy
 msgid "`BCFIPSJSSE` provider option is currently not supported in native image."
-msgstr ""
+msgstr "`BCFIPSJSSE` プロバイダーオプションは、現在ネイティブイメージではサポートされていません。"
 
 #. type: Title ==
 #: upstream/_guides/security-customization.adoc:385
