--- a/l10n/po/ja_JP/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.4.Final released - Maintenance release'\n"
@@ -34,71 +34,88 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.13.4.Final released - Maintenance release'\n"
+"date: 2021-05-12\n"
+"tags: release\n"
+"synopsis: 1.13.4.Finalは、1.13リリーストレインのメンテナンスリリースです。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:11
+#, fuzzy
 msgid "We just released 1.13.4.Final, a new maintenance release for the 1.13 release train."
-msgstr ""
+msgstr "1.13リリーストレインの新しいメンテナンスリリースである1.13.4.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:13
+#, fuzzy
 msgid "1.13.4.Final is a safe upgrade for everyone using Quarkus 1.13."
-msgstr ""
+msgstr "1.13.4.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:15
+#, fuzzy
 msgid "If you are not using 1.13 already, please refer to the https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13 migration guide]."
-msgstr ""
+msgstr "すでに1.13を使用していない場合は、 link:https://github.com/quarkusio/quarkus/wiki/Migration-Guide-1.13[1.13移行ガイド]を参照してください。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:16
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "What's new?"
-msgstr ""
+msgstr "最新情報は？"
 
 #. type: Title ===
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:18
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Full changelog"
-msgstr ""
+msgstr "フルチェンジログ"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:21
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.4.Final[the full changelog of 1.13.4.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.4.Final[1.13.4.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:22
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Come Join Us"
-msgstr ""
+msgstr "私たちと一緒に働きませんか？"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:25
+#, fuzzy
 msgid "We value your feedback a lot so please report bugs, ask for improvements... Let's build something great together!"
-msgstr ""
+msgstr "皆様からのフィードバックを大切にしていますので、バグを報告したり、改善を求めたりしてください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:27
+#, fuzzy
 msgid "If you are a Quarkus user or just curious, don't be shy and join our welcoming community:"
-msgstr ""
+msgstr "Quarkusをお使いの方、または興味のある方は、恥ずかしがらずに私たちの歓迎するコミュニティに参加してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:29
+#, fuzzy
 msgid "provide feedback on https://github.com/quarkusio/quarkus/issues[GitHub];"
-msgstr ""
+msgstr "は、 link:https://github.com/quarkusio/quarkus/issues[GitHub]でフィードバックを行っています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:30
+#, fuzzy
 msgid "craft some code and https://github.com/quarkusio/quarkus/pulls[push a PR];"
-msgstr ""
+msgstr "コードを作って link:https://github.com/quarkusio/quarkus/pulls[PRをし]てください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:31
+#, fuzzy
 msgid "discuss with us on https://quarkusio.zulipchat.com/[Zulip] and on the https://groups.google.com/d/forum/quarkus-dev[mailing list];"
-msgstr ""
+msgstr "link:https://quarkusio.zulipchat.com/[Zulip]や link:https://groups.google.com/d/forum/quarkus-dev[メーリングリスト]で議論することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-05-12-quarkus-1-13-4-final-released.adoc:32
+#, fuzzy
 msgid "ask your questions on https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]."
-msgstr ""
+msgstr "link:https://stackoverflow.com/questions/tagged/quarkus[Stack Overflow]で質問をしてみましょう。"
