--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-sync-http-client-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-sync-http-client-build-time-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-13 02:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-sync-http-client-build-time-config.adoc:16
 #, no-wrap
 msgid ""
-"icon:lock[title=Fixed at build time] [[quarkus-amazon-common-config-group-sync-http-client-build-time-config_quarkus.kms.sync-client.type]]`link:#quarkus-amazon-common-config-group-sync-http-client-build-time-config_quarkus.kms.sync-client.type[quarkus.kms.sync-client.type]`\n"
+"icon:lock[title=Fixed at build time] [[quarkus-amazon-common-config-group-sync-http-client-build-time-config_quarkus.ssm.sync-client.type]]`link:#quarkus-amazon-common-config-group-sync-http-client-build-time-config_quarkus.ssm.sync-client.type[quarkus.ssm.sync-client.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
