--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-jackson.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-jackson.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-13 02:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,6 +55,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-jackson.adoc:18
 #: upstream/_generated-config/main/config/quarkus-jackson.adoc:27
+#: upstream/_generated-config/main/config/quarkus-jackson.adoc:36
 #, no-wrap
 msgid "boolean"
 msgstr "boolean"
@@ -62,6 +63,7 @@ msgstr "boolean"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-jackson.adoc:21
 #: upstream/_generated-config/main/config/quarkus-jackson.adoc:30
+#: upstream/_generated-config/main/config/quarkus-jackson.adoc:39
 #, no-wrap
 msgid "`false`"
 msgstr "`false`"
@@ -82,6 +84,18 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-jackson.adoc:35
 #, no-wrap
 msgid ""
+"icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.accept-case-insensitive-enums]]`link:#quarkus-jackson_quarkus.jackson.accept-case-insensitive-enums[quarkus.jackson.accept-case-insensitive-enums]`\n"
+"\n"
+"[.description]\n"
+"--\n"
+"If enabled, Jackson will ignore case during Enum deserialization.\n"
+"--"
+msgstr ""
+
+#. type: Table
+#: upstream/_generated-config/main/config/quarkus-jackson.adoc:44
+#, no-wrap
+msgid ""
 "icon:lock[title=Fixed at build time] [[quarkus-jackson_quarkus.jackson.timezone]]`link:#quarkus-jackson_quarkus.jackson.timezone[quarkus.jackson.timezone]`\n"
 "\n"
 "[.description]\n"
@@ -91,13 +105,13 @@ msgid ""
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-jackson.adoc:37
+#: upstream/_generated-config/main/config/quarkus-jackson.adoc:46
 #, no-wrap
 msgid "link:https://docs.oracle.com/javase/8/docs/api/java/time/ZoneId.html[ZoneId]"
 msgstr ""
 
 #. type: Table
-#: upstream/_generated-config/main/config/quarkus-jackson.adoc:39
+#: upstream/_generated-config/main/config/quarkus-jackson.adoc:48
 #, no-wrap
 msgid "`UTC`"
 msgstr ""
