--- a/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/security-keycloak-authorization.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-05-13 02:29+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -704,41 +704,108 @@ msgstr "`@RolesAllowed` アノテーションまたは `application.properties` 
 #. type: Title ==
 #: upstream/_versions/main/guides/security-keycloak-authorization.adoc:366
 #, no-wrap
+msgid "Multi-Tenancy"
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:369
+msgid "It is possible to configure multiple policy enforcer configurations, one per each tenant, similarly to how it can be done for link:security-openid-connect-multitenancy[Multi-Tenant OpenId Connect Service Applications]."
+msgstr ""
+
+#. type: Plain text
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:371
+msgid "For example:"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:375
+#, no-wrap
+msgid "quarkus.keycloak.policy-enforcer.enable=true\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:380
+#, no-wrap
+msgid ""
+"# Default Tenant\n"
+"quarkus.oidc.auth-server-url=${keycloak.url}/realms/quarkus\n"
+"quarkus.oidc.client-id=quarkus-app\n"
+"quarkus.oidc.credentials.secret=secret\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:385
+#, no-wrap
+msgid ""
+"quarkus.keycloak.policy-enforcer.enforcement-mode=PERMISSIVE\n"
+"quarkus.keycloak.policy-enforcer.paths.1.name=Permission Resource\n"
+"quarkus.keycloak.policy-enforcer.paths.1.path=/api/permission\n"
+"quarkus.keycloak.policy-enforcer.paths.1.claim-information-point.claims.static-claim=static-claim\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:387
+#, no-wrap
+msgid "# Tenant1\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:391
+#, no-wrap
+msgid ""
+"quarkus.oidc.tenant1.auth-server-url=${keycloak.url}/realms/quarkus\n"
+"quarkus.oidc.tenant1.client-id=quarkus-app\n"
+"quarkus.oidc.tenant1.credentials.secret=secret\n"
+msgstr ""
+
+#. type: delimited block -
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:396
+#, no-wrap
+msgid ""
+"quarkus.keycloak.tenant1.policy-enforcer.enforcement-mode=PERMISSIVE\n"
+"quarkus.keycloak.tenant1.policy-enforcer.paths.1.name=Permission Resource\n"
+"quarkus.keycloak.tenant1.policy-enforcer.paths.1.path=/api/permission\n"
+"quarkus.keycloak.tenant1.policy-enforcer.paths.1.claim-information-point.claims.static-claim=static-claim\n"
+msgstr ""
+
+#. type: Title ==
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:398
+#, no-wrap
 msgid "Configuration Reference"
 msgstr "設定リファレンス"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:369
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:401
 msgid "The configuration is based on the official https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Keycloak Policy Enforcer Configuration]. If you are looking for more details about the different configuration options, please take a look at this documentation,"
 msgstr "この設定は、 link:https://www.keycloak.org/docs/latest/authorization_services/index.html#_enforcer_filter[Keycloak Policy Enforcer] の公式設定に基づいています。異なる設定オプションについての詳細をお探しの方は、こちらのドキュメントをご覧ください。"
 
 #. type: Title ==
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:372
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:404
 #, no-wrap
 msgid "References"
 msgstr "リファレンス"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:375
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:407
 msgid "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 msgstr "https://www.keycloak.org/documentation.html[Keycloak Documentation]"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:376
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:408
 msgid "https://www.keycloak.org/docs/latest/authorization_services/index.html[Keycloak Authorization Services Documentation]"
 msgstr ""
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:377
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:409
 msgid "https://openid.net/connect/[OpenID Connect]"
 msgstr "https://openid.net/connect/[OpenID Connect]"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:378
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:410
 msgid "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 msgstr "https://tools.ietf.org/html/rfc7519[JSON Web Token]"
 
 #. type: Plain text
-#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:378
+#: upstream/_versions/main/guides/security-keycloak-authorization.adoc:410
 msgid "link:security[Quarkus Security]"
 msgstr "link:security[Quarkus Security]"
