--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-13 02:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,7 +24,7 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:8
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws-aws-services-configurations]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws-aws-services-configurations[AWS services configurations]"
+msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws-aws-services-configurations]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws-aws-services-configurations[AWS services configurations]"
 msgstr ""
 
 #. type: Table
@@ -51,7 +51,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:27
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.region]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.region[quarkus.kms.aws.region]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.region]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.region[quarkus.ssm.aws.region]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -80,7 +80,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:59
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.type]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.type[quarkus.kms.aws.credentials.type]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.type]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.type[quarkus.ssm.aws.credentials.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -126,14 +126,14 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:65
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.default-provider-default-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.default-provider-default-credentials-provider-configuration[Default credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.default-provider-default-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.default-provider-default-credentials-provider-configuration[Default credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:74
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.default-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.default-provider.async-credential-update-enabled[quarkus.kms.aws.credentials.default-provider.async-credential-update-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled[quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -161,7 +161,7 @@ msgstr "`false`"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:84
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.default-provider.reuse-last-provider-enabled]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.default-provider.reuse-last-provider-enabled[quarkus.kms.aws.credentials.default-provider.reuse-last-provider-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled[quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -179,14 +179,14 @@ msgstr "`true`"
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:90
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.static-provider-static-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.static-provider-static-credentials-provider-configuration[Static credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.static-provider-static-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.static-provider-static-credentials-provider-configuration[Static credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:98
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.static-provider.access-key-id]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.static-provider.access-key-id[quarkus.kms.aws.credentials.static-provider.access-key-id]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.static-provider.access-key-id]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.static-provider.access-key-id[quarkus.ssm.aws.credentials.static-provider.access-key-id]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -207,7 +207,7 @@ msgstr "string"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:107
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.static-provider.secret-access-key]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.static-provider.secret-access-key[quarkus.kms.aws.credentials.static-provider.secret-access-key]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.static-provider.secret-access-key]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.static-provider.secret-access-key[quarkus.ssm.aws.credentials.static-provider.secret-access-key]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -218,14 +218,14 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:113
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration[AWS Profile credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.profile-provider-aws-profile-credentials-provider-configuration[AWS Profile credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:122
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.profile-provider.profile-name]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.profile-provider.profile-name[quarkus.kms.aws.credentials.profile-provider.profile-name]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.profile-provider.profile-name]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.profile-provider.profile-name[quarkus.ssm.aws.credentials.profile-provider.profile-name]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -237,14 +237,14 @@ msgstr ""
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:128
 #, no-wrap
-msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider-process-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider-process-credentials-provider-configuration[Process credentials provider configuration]"
+msgid "[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider-process-credentials-provider-configuration]]link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider-process-credentials-provider-configuration[Process credentials provider configuration]"
 msgstr ""
 
 #. type: Table
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:137
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.async-credential-update-enabled[quarkus.kms.aws.credentials.process-provider.async-credential-update-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled[quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -257,7 +257,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:147
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.credential-refresh-threshold]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.credential-refresh-threshold[quarkus.kms.aws.credentials.process-provider.credential-refresh-threshold]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold[quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -284,7 +284,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:157
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.process-output-limit]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.process-output-limit[quarkus.kms.aws.credentials.process-provider.process-output-limit]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.process-output-limit]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.process-output-limit[quarkus.ssm.aws.credentials.process-provider.process-output-limit]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -308,7 +308,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-config.adoc:166
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.command]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.kms.aws.credentials.process-provider.command[quarkus.kms.aws.credentials.process-provider.command]`\n"
+"[[quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.command]]`link:#quarkus-amazon-common-config-group-aws-config_quarkus.ssm.aws.credentials.process-provider.command[quarkus.ssm.aws.credentials.process-provider.command]`\n"
 "\n"
 "[.description]\n"
 "--\n"
