--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-13 02:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config.adoc:17
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.kms.aws.credentials.default-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.kms.aws.credentials.default-provider.async-credential-update-enabled[quarkus.kms.aws.credentials.default-provider.async-credential-update-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled[quarkus.ssm.aws.credentials.default-provider.async-credential-update-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -69,7 +69,7 @@ msgstr "`false`"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config.adoc:27
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.kms.aws.credentials.default-provider.reuse-last-provider-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.kms.aws.credentials.default-provider.reuse-last-provider-enabled[quarkus.kms.aws.credentials.default-provider.reuse-last-provider-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-default-credentials-provider-config_quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled[quarkus.ssm.aws.credentials.default-provider.reuse-last-provider-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
