--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:37+0000\n"
+"POT-Creation-Date: 2021-05-13 02:32+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config.adoc:17
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.async-credential-update-enabled[quarkus.kms.aws.credentials.process-provider.async-credential-update-enabled]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled[quarkus.ssm.aws.credentials.process-provider.async-credential-update-enabled]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -68,7 +68,7 @@ msgstr "`false`"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config.adoc:27
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.credential-refresh-threshold]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.credential-refresh-threshold[quarkus.kms.aws.credentials.process-provider.credential-refresh-threshold]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold[quarkus.ssm.aws.credentials.process-provider.credential-refresh-threshold]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -95,7 +95,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config.adoc:37
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.process-output-limit]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.process-output-limit[quarkus.kms.aws.credentials.process-provider.process-output-limit]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.process-output-limit]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.process-output-limit[quarkus.ssm.aws.credentials.process-provider.process-output-limit]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -119,7 +119,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config.adoc:46
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.command]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.kms.aws.credentials.process-provider.command[quarkus.kms.aws.credentials.process-provider.command]`\n"
+"[[quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.command]]`link:#quarkus-amazon-common-config-group-aws-credentials-provider-config-process-credentials-provider-config_quarkus.ssm.aws.credentials.process-provider.command[quarkus.ssm.aws.credentials.process-provider.command]`\n"
 "\n"
 "[.description]\n"
 "--\n"
