--- a/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc.po
+++ b/l10n/po/ja_JP/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:36+0000\n"
+"POT-Creation-Date: 2021-05-13 02:31+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -43,7 +43,7 @@ msgstr "デフォルト"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:24
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.type[quarkus.kms.sync-client.tls-trust-managers-provider.type]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.type[quarkus.ssm.sync-client.tls-trust-managers-provider.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -77,7 +77,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:33
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.file-store.path]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.file-store.path[quarkus.kms.sync-client.tls-trust-managers-provider.file-store.path]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.path]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.path[quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.path]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -96,7 +96,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:43
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.file-store.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.file-store.type[quarkus.kms.sync-client.tls-trust-managers-provider.file-store.type]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.type[quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -118,7 +118,7 @@ msgstr "string"
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:52
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.file-store.password]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.sync-client.tls-trust-managers-provider.file-store.password[quarkus.kms.sync-client.tls-trust-managers-provider.file-store.password]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.password]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.password[quarkus.ssm.sync-client.tls-trust-managers-provider.file-store.password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -130,7 +130,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:69
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.type[quarkus.kms.async-client.tls-trust-managers-provider.type]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.type[quarkus.ssm.async-client.tls-trust-managers-provider.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -150,7 +150,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:78
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.file-store.path]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.file-store.path[quarkus.kms.async-client.tls-trust-managers-provider.file-store.path]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.file-store.path]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.file-store.path[quarkus.ssm.async-client.tls-trust-managers-provider.file-store.path]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -162,7 +162,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:88
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.file-store.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.file-store.type[quarkus.kms.async-client.tls-trust-managers-provider.file-store.type]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.file-store.type]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.file-store.type[quarkus.ssm.async-client.tls-trust-managers-provider.file-store.type]`\n"
 "\n"
 "[.description]\n"
 "--\n"
@@ -175,7 +175,7 @@ msgstr ""
 #: upstream/_generated-config/main/config/quarkus-amazon-common-config-group-tls-trust-managers-provider-config.adoc:97
 #, no-wrap
 msgid ""
-"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.file-store.password]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.kms.async-client.tls-trust-managers-provider.file-store.password[quarkus.kms.async-client.tls-trust-managers-provider.file-store.password]`\n"
+"[[quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.file-store.password]]`link:#quarkus-amazon-common-config-group-tls-trust-managers-provider-config_quarkus.ssm.async-client.tls-trust-managers-provider.file-store.password[quarkus.ssm.async-client.tls-trust-managers-provider.file-store.password]`\n"
 "\n"
 "[.description]\n"
 "--\n"
