--- a/l10n/po/ja_JP/_versions/main/guides/amazon-s3.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/amazon-s3.adoc.po
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2021-05-07 17:34+0000\n"
+"POT-Creation-Date: 2021-05-13 02:28+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1014,7 +1014,7 @@ msgid ""
 "        return Uni.createFrom()\n"
 "                .completionStage(() -> s3.getObject(buildGetRequest(objectKey), AsyncResponseTransformer.toFile(tempFile)))\n"
 "                .onItem()\n"
-"                .apply(object -> Response.ok(tempFile)\n"
+"                .transform(object -> Response.ok(tempFile)\n"
 "                        .header(\"Content-Disposition\", \"attachment;filename=\" + objectKey)\n"
 "                        .header(\"Content-Type\", object.contentType()).build());\n"
 "    }\n"
